...
    <string name="qrf_title_text">Scan QR</string>
    <string name="camera_button_text">Press to start camera</string>
    <string name="manual_entry_button_text">MANUAL ENTRY</string>

    <!-- Strings related to SelectAttachFragment -->
    <string name="saf_title_text">Select Attachment</string>
    <string name="register_button_text">Register</string>

    <!-- Strings related to RobotsFragment -->
    <string name="welcome_text">Welcome Home, %s</string>

    <!-- Strings related to settings_menu -->
    <string name="log_out_text">Log out</string>
...
